# diffdirs.nvim

./: CHANGELOG.md  Cargo.toml  build.lua  neovim.yml
.github/workflows/: release.yml  rust-check.yml
src/: config.rs  error.rs  lib.rs
