[package]
name = "diffdirs_nvim"
version = "0.2.2-alpha.1"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "diffdirs"
crate-type = ["cdylib"]

[profile.release]
debug="line-tables-only"
strip="debuginfo"

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
nvim-oxi = { version = "0.5", default-features=false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"
walkdir = "2.5"

[features]
neovim-0-10 = ["nvim-oxi/neovim-0-10"]
neovim-0-9 = ["nvim-oxi/neovim-0-9"]
neovim-nightly = ["nvim-oxi/neovim-nightly"]
